<resources>
    <string name="app_name">PixelThoughts</string>
    <string name="info">A 60-second meditation tool to help clear your mind</string>
    <string name="name">Pixel Thoughts</string>
    <string name="messages">Put a stressful thought in the star</string>
    <string name="author">designed by ♥ monthui0002</string>
    <string name="link">based on <a href="https://www.pixelthoughts.co/">https://www.pixelthoughts.co/</a></string>
    <string name="question">What\'s bothering you?...</string>
    <string name="btn_submit">DONE</string>
</resources>